# legal_compliance_agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/policies/: sample_policies.json
data/sources/: targets.json
src/legal_agent/: __init__.py  cli.py  config.py  scrapy.cfg
src/legal_agent/db/: __init__.py  client.py  schemas.py
src/legal_agent/instrumentation/: __init__.py  setup.py
src/legal_agent/scraping/: __init__.py  items.py  pipelines.py  settings.py
src/legal_agent/scraping/spiders/: regulatory_spider.py
src/legal_agent/utils/: loader.py  models.py  report.py
src/legal_agent/workflow/: __init__.py  events.py  llm_provider.py  prompts.py  workflow.py
tests/: test_chunking.py  test_events.py
